removed testing monitor Logs from code, need to find why dog food file cant be opened